# event-ledger

./: .gitignore  Dockerfile  Dockerfile.otel-collector  README.md  docker-compose.dev.yml  docker-compose.yml  otel-collector-config.aws.yaml  otel-collector-config.yaml  pyproject.toml  requirements.md
.github/workflows/: ci.yml  deploy.yml  destroy-aws.yml
docs/: ci-cd.md  cloud-architecture.md
infrastructure/aws/: README.md  backend.tf  ecr.tf  github_oidc.tf  main.tf  observability.tf  state.tf  terraform.tfvars.example  variables.tf
ledger_common/: __init__.py  circuit_breaker.py  logging.py  metrics.py  money.py  openapi.py  schemas.py  tracing.py
services/account/app/: config.py  database.py  main.py  models.py  repository.py  routes.py
services/gateway/app/: account_client.py  config.py  database.py  limiter.py  main.py  models.py  queue_worker.py  repository.py  routes.py
tests/: conftest.py
tests/contract/: conftest.py  test_api_contract.py  test_openapi_contracts.py  test_pact_consumer.py  test_pact_provider.py
tests/contract/schemas/: apply_transaction.json  event_payload.json
tests/integration/: test_full_flow.py
tests/pacts/: event-gateway-account-service.json
tests/unit/: test_account_client.py  test_account_repository.py  test_circuit_breaker.py  test_gateway_repository.py  test_money.py  test_tracing.py  test_validation.py
