[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-ledger"
version = "1.0.0"
description = "Event Ledger - distributed financial transaction processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "jsonschema>=4.23.0",
    "pact-python>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ledger_common*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["services", "tests"]
pythonpath = ["."]
addopts = [
    "--cov=ledger_common",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["ledger_common", "services"]
omit = ["tests/*"]

[tool.coverage.html]
directory = "htmlcov"
